# FitnessOS

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .env.production.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e1b6ab03639a_initial_schema.py
backend/app/: main.py
backend/app/agents/: base.py  graph.py
backend/app/agents/analytics/: agent.py
backend/app/agents/coach/: agent.py
backend/app/agents/event/: agent.py
backend/app/agents/knowledge/: agent.py
backend/app/agents/memory/: agent.py
backend/app/agents/nutrition/: agent.py
backend/app/agents/reflection/: agent.py
backend/app/agents/scheduler/: agent.py
backend/app/agents/swimming/: agent.py
backend/app/agents/workout/: agent.py
backend/app/api/v1/: router.py
backend/app/api/v1/middleware/: rate_limit.py
backend/app/api/v1/routes/: analytics.py  chat.py  dashboard.py  measurements.py  nutrition.py  reviews.py  swimming.py  users.py  (+1 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  analytics.py  audit.py  coach.py  event.py  goal.py  habit.py  measurement.py  memory.py  notification.py  nutrition.py  swimming.py  user.py  workout.py
backend/app/repositories/: analytics_repository.py  base.py  memory_repository.py  nutrition_repository.py  user_repository.py  workout_repository.py
backend/app/services/llm/: provider.py
backend/app/services/training/: ai_plan_generator.py  personalized_generator.py  progressive_overload.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: analytics.py  embeddings.py  notifications.py  reviews.py
backend/scripts/: seed_dev_user.py  seed_dev_user.py.bak  seed_exercises.py  seed_exercises.py.bak  seed_food_database.py  seed_food_database.py.bak  seed_knowledge_base.py  seed_knowledge_base.py.bak
(+60 files in other folders)
