[tool.poetry]
name = "fitnessos-backend"
version = "1.0.0"
description = "FitnessOS - Multi-Agent AI Personal Training Operating System"
authors = ["FitnessOS Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
python-multipart = "^0.0.9"

# Database
sqlalchemy = { version = "^2.0.0", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"

# Supabase
supabase = "^2.0.0"

# AI / LLM
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.3.0"
langchain-google-genai = "^2.0.0"
langgraph = "^0.2.0"
openai = "^1.50.0"
anthropic = "^0.34.0"
tiktoken = "^0.7.0"

# Authentication
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }

# Background jobs
celery = { version = "^5.4.0", extras = ["redis"] }
redis = "^5.0.0"

# HTTP client
httpx = "^0.27.0"

# Data validation
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
email-validator = "^2.2.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^9.0.0"
structlog = "^24.0.0"
python-dateutil = "^2.9.0"
numpy = "^1.26.0"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
black = "^24.8.0"
ruff = "^0.6.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
